--- a/spring_cloud_gateway_demo/src/main/resources/application.yml
+++ b/spring_cloud_gateway_demo/src/main/resources/application.yml
@@ -1,7 +1,11 @@
+# 服务端口号
+server:
+  port: 9002
+
 spring:
   # 配置微服务名称
   application:
-    name: nacos-demo
+    name: gateway-demo
   cloud:
     # 配置cloud nacos
     nacos:
@@ -15,9 +19,20 @@ spring:
         # nacos命名空间 需要在nacos服务中命名空间选项中创建 此处不是填写命名空间的名字 而是填写命名空间ID
         namespace: 1f371396-65b8-41d1-ad98-b511bacdd8f8
         # 微服务自定义分组 有写就会根据写的分组 对微服务进行分组 没有则默分配为DEFAULT_GROUP分组
-        group: dev-demo
+        group: dev_demo
         # 服务权重 数值越大可分配的流量就越多
         weight: 1
-
-server:
-  port: 9001
+    gateway:
+      # 开启动态路由功能 有了此配置并可以动态修改配置参数
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: nacos-demo
+          uri: lb://nacos-demo
+          # 定义路由匹配的条件，如/item/**的所有路径和/search/**的所有路径
+          predicates:
+            - Path=/gateway/nacosDemo/**
+          filters:
+            # 路径重写
+            - RewritePath=/gateway/(?<segment>.*), /$\{segment}
