--- a/spring_cloud_nacos_demo/src/main/resources/application.yml
+++ b/spring_cloud_nacos_demo/src/main/resources/application.yml
@@ -1,7 +1,11 @@
+# 服务端口号
+server:
+  port: 9001
+
 spring:
   # 配置微服务名称
   application:
-    name: spring_cloud_nacos_demo
+    name: nacos-demo
   cloud:
     # 配置cloud nacos
     nacos:
@@ -18,6 +22,3 @@ spring:
         group: dev_demo
         # 服务权重 数值越大可分配的流量就越多
         weight: 1
-
-server:
-  port: 9001
