--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring_cloud_nacos_demo</module>
         <module>spring_cloud_gateway_demo</module>
         <module>spring_cloud_ribbon_demo</module>
+        <module>spring_cloud_sentinel_demo</module>
     </modules>
 
     <dependencyManagement>
